--- a/templates/decrypted.html
+++ b/templates/decrypted.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hello World</title>
+    <title>Hello S7r4n93r</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <style>
         html,
@@ -47,6 +47,7 @@
 <body>
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
     <center id="intro">
+        <br/><br/>
         <h1><span id="Hello">Hello World!</span></h1>
         <h1> I am
             <span id="Bravo" class="txt-rotate" data-period="20"
